[package]
name = "kreivo-monitor"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
prometheus = "0.13"
# Using a crate for remote write structure/logic
prometheus-reqwest-remote-write = "0.1"
# We need snappy for remote write compression
snap = "1.1"
# Protobuf support
prost = "0.12"
# For parsing prometheus text format (simple regex or split for now if no crate)
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
